kubernetes/certificate/02-self-signed-with-cert-manger/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: www-praekiko-tk-tls
      hosts:
        - www.praekiko.tk
  rules:
    - host: www.praekiko.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
